syntax = "proto3";

package api;

service MyService {
    rpc Greet (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}